Fix: some compilation issues